INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(ThirdParty)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/ThirdParty_Builds/include)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/ThirdParty_Builds/include/bullet)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/ThirdParty_Builds/lib)

# list of OBJECT libraries will be collected here
set(ThirdParty_requisites)

add_definitions(-DLUTEFISK3D_LOGGING)
option(LUTEFISK3D_SSE "Use SSE " ON)
option(LUTEFISK3D_HEADLESS "Build without renderer component" OFF)
option(LUTEFISK3D_SOUNDLESS "Build without audio component" OFF)
option(LUTEFISK3D_INPUTLESS "Build without input component" OFF)
option(LUTEFISK3D_NAVIGATIONLESS "Build without navigation component" OFF)
option(LUTEFISK3D_NETLESS "Build without kNet network component" ON)
option(LUTEFISK3D_UILESS "Build without old UI component" OFF)
option(LUTEFISK3D_2DLESS "Build without 2D component" OFF)
option(LUTEFISK3D_PHYSICLESS "Build without 3d physics component" OFF)

option(LUTEFISK3D_PROFILING_SUPPORT "Internal profiling subsystem" ON)
if(LUTEFISK3D_PROFILING_SUPPORT)
    add_definitions(-DLUTEFISK3D_PROFILING)
endif()

if(LUTEFISK3D_SSE)
    add_definitions(-DLUTEFISK3D_SSE)
endif()
if(NOT LUTEFISK3D_INPUTLESS)
    add_definitions(-DLUTEFISK3D_INPUT)
endif()
if(NOT LUTEFISK3D_NAVIGATIONLESS)
    add_definitions(-DLUTEFISK3D_NAVIGATION)
endif()
if(NOT LUTEFISK3D_UILESS)
    add_definitions(-DLUTEFISK3D_UI)
endif()
if(NOT LUTEFISK3D_NETLESS)
    add_definitions(-DLUTEFISK3D_NETWORK)
endif()
if(NOT LUTEFISK3D_2DLESS)
    add_definitions(-DLUTEFISK3D_2D)
endif()
if(NOT LUTEFISK3D_PHYSICLESS)
    add_definitions(-DLUTEFISK3D_PHYSICS)
endif()

add_subdirectory(ThirdParty) # add required third party libraries to the build
add_subdirectory(Lutefisk3D)
add_subdirectory(Samples)
