set(INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedSprite2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationSet2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionBox2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionChain2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionCircle2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionEdge2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionPolygon2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionShape2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Constraint2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintDistance2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintFriction2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintGear2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintMotor2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintMouse2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintPrismatic2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintPulley2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintRevolute2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintRope2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintWeld2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintWheel2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Drawable2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEffect2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEmitter2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsEvents2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsUtils2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsWorld2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Renderer2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RigidBody2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Sprite2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriterData2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriterInstance2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriteSheet2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticSprite2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMap2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMapDefs2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMapLayer2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/TmxFile2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Urho2D.h
)
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimatedSprite2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AnimationSet2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionBox2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionChain2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionCircle2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionEdge2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionPolygon2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/CollisionShape2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Constraint2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintDistance2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintFriction2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintGear2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintMotor2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintMouse2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintPrismatic2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintPulley2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintRevolute2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintRope2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintWeld2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ConstraintWheel2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Drawable2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEffect2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ParticleEmitter2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsWorld2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Renderer2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RigidBody2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Sprite2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriterData2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriterInstance2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SpriteSheet2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StaticSprite2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMap2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMapDefs2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TileMapLayer2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TmxFile2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Urho2D.cpp
)

set(Lutefisk3D_LINK_LIBRARIES ${Lutefisk3D_LINK_LIBRARIES} PugiXml Box2D PARENT_SCOPE)
set(Lutefisk3D_COMPONENT_SOURCES ${Lutefisk3D_COMPONENT_SOURCES} ${SOURCE} ${INCLUDES} PARENT_SCOPE)
install(FILES ${INCLUDES} DESTINATION include/Lutefisk3D/2D)
